--- a/project.html
+++ b/project.html
@@ -184,7 +184,7 @@
         Finally, users preferred wider width CTA buttons on the login and sign up pages.</p>
 
       <img src="images/trove/surveygraph.png" alt="preference graph" class="graph">
-        <p>83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
+        <p>83% of user preferred the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       </section>
     <!-- final project -->
     <section>
