update to busybus page

--- a/busybus.html
+++ b/busybus.html
@@ -80,7 +80,8 @@
   <div class="projectmain">
     <section class="problem">
       <h2>Presenting Problem:</h2>
-      <p>The client wanted to enter the cloud application market with an application that also provided user collaboration features. </p>
+      <p>There has been an increase in bus routes in this particular city. Riders are getting confused by the bus
+      arrival and departure times. One stop in particular, Washington & State, is causing a lot of problems.</p>
      </section>
     <section class="solution">
       <h2>The Solution:</h2>
@@ -109,7 +110,7 @@
      </section>
     <section class="prototypes">
       <h2>Prototypes:</h2>
-      <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
+      <p>Combining information from my user surveys, I was able to outline what I would like my application to look like. </p>
       <img src="images/busybus/sketch1.png" alt="prototype" class="busprototype">
       <a href="https://www.dropbox.com/s/jln6v9rd5yeytzz/Screenshot%202020-01-13%2020.25.57.png?dl=0" target="_blank" class="button">View more</a>
        </section>
