--- a/medchat.html
+++ b/medchat.html
@@ -106,7 +106,7 @@
           an application that could take some of the most popular features of the MyChart
            application and cut out some of the unnecessary features.
         </p>
-        <img src="images/medchat/Screenshot 2020-07-22 21.28.15.png" alt="user survey image" class="medchatmockup">
+        <img src="images/medchat/smartmockups_kfaf7re4.jpg" alt="user survey image" class="medchatmockup">
             <a href="https://docs.google.com/document/d/1kF1auQUzz9Y78F0U1aUMGWyYD7WaEPXr03TKNxQtFBQ/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
        </section>
       <!-- user personas -->
@@ -115,33 +115,24 @@
           <p>I was able to craft user personas based on the information gathered in the survey. Demographically,
             the respondents were majority female (80%), and aged between 25-54 (80%).
            </p>
-          <img src="images/medchat/user1.png" alt="user persona image" class="center">
-          <img src="images/medchat/user2.png" alt="user persona image" class="center">
-          <img src="images/medchat/user3.png" alt="user persona image" class="center">
+          <img src="images/medchat/redlady.svg" alt="user persona image" class="sketch">
+          <img src="images/medchat/yellow lady.svg" alt="user persona image" class="sketch">
+          <img src="images/medchat/blueguy.svg" alt="user persona image" class="sketch">
          </section>
     <!-- user stories -->
     <section>
       <h2>Information Architecture:</h2>
-      <p>The user stories were created by gathering data from the user survey responses, the competitive analysis and the user personas.
-        I used these to create the user flows and the wireframes of the application. </p>
-      <img src="images/medchat/Screenshot 2020-07-08 14.02.22.png" alt="user stories image" class="center">
+      <p>I then crafted user stories and userflows were by gathering data from the user survey responses, the competitive analysis and the user personas.
+        Below are the highest prority user stories: </p>
+      <img src="images/medchat/→ I want to message.svg" alt="user stories image" class="center">
       <a href="https://docs.google.com/spreadsheets/d/19FFi336tp-7AefScqzLHkzyhhFTLIohiuIsehttFe1s/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
-   <!-- user flows-->
-    <div class="userflow">
-      <h2>User Flows:</h2>
-      <p>I created three user flows for the application:</p>
-        <br>
-        <img src="images/medchat/User_Calendar_Flow.png" alt="user flows image" class="user">
-        <img src="images/medchat/User_Login_Flow.png" alt="user flows image" class="user">
-        <img src="images/medchat/User_Test_Flow.png" alt="user flows image" class="user">
-          </div>
+
   <!-- wireframe -->
   <section class="wireframes">
     <h2>Sketches and Wireframes:</h2>
     <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-    <img src="images/medchat/medchatsketch.jpg" alt="wireframe image" class="wireframeimage">
-    <img src="images/medchat/medchatsketch2.jpg" alt="wireframe image" class="wireframeimage">
+    <img src="images/medchat/smartmockups_kfbawuls.png" alt="wireframe image" class="wireframeimage">
     <a href="https://invis.io/QPXQQCC59XR" target="_blank" class="button">View more</a>
      </section>
   <!-- preference testing -->
@@ -164,6 +155,7 @@
       we want consumers to feel comfortable while using our product. </p>
     <p>In designing the logo, I drafted three different designs:  </p>
     <img src="images/medchat/medchatlogosketch.jpg" alt="sketches" class="medchatsketch">
+    Here is the figma file containing the style guide I created, feel free to play around in it:
     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FPF2OyAvKRmBfRVEY2YUCK8%2FMedchat_style%3Fnode-id%3D0%253A1&chrome=DOCUMENTATION" allowfullscreen></iframe>
      </section>
