--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
        </div>
      <div class="project_content">
      <aside class="busybus">
-      <a href="/busybus.html"><img src="/images/bzybus.svg" class="trovepic" alt="mockup"></a>
+      <a href="/busybus.html"><img src="images/busybus.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
      <div class="project_content">
       <aside class="medchat">
-        <a href="/medchat.html"><img src="images/medchatmockup1.svg" class="trovepic" alt="mockup"></a>
+        <a href="/medchat.html"><img src="images/medchat.svg" class="trovepic" alt="mockup"></a>
       </aside>
       </div>
       <div class="project_content">
@@ -121,10 +121,10 @@
 <!-- footer -->
       <footer class="footer">
         <ul class="socialmedia">
-         <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
-         <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
-         <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-         <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
+         <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-3x"></i></a></li>
+         <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></li>
+         <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-3x"></i></a></li>
         </ul>
         <p>Designed and Developed by Imani Ricks 2020</p>
       </footer>
