--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
        </div>
      <div class="project_content">
      <aside class="busybus">
-      <a href="/busybus.html"><img src="images/busybus.svg" class="trovepic" alt="mockup"></a>
+      <a href="/busybus.html"><img src="images/medchat.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
      <div class="project_content">
       <aside class="medchat">
-        <a href="/medchat.html"><img src="images/medchat.svg" class="trovepic" alt="mockup"></a>
+        <a href="/medchat.html"><img src="images/busybus.svg" class="trovepic" alt="mockup"></a>
       </aside>
       </div>
       <div class="project_content">
