update trove project page

--- a/project.html
+++ b/project.html
@@ -123,8 +123,8 @@
      </section>
     <section>
       <h2>User Personas:</h2>
-        <img src="images/trove/user2.png" alt="user persona image" class="center">
-        <img src="images/trove/user1.png" alt="user persona image" class="center">
+        <img src="images/trove/bluegirl.svg" alt="user persona image" class="sketch">
+        <img src="images/trove/yellowgirl.svg" alt="user persona image" class="sketch">
        </section>
 
     <!-- info architecture -->
@@ -133,19 +133,11 @@
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories
         based off the data from the user survey responses,
         the competitive analysis and the user personas.
-        I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
-      <img src="images/trove/userstories.png" alt="user stories image" class="center">
+        I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.
+        Here are the five top tasks:</p>
+      <img src="images/trove/→ I want to search f.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
-    <div class="userflow">
-      <h2>User Flows:</h2>
-        <br>
-        <img src="images/trove/userflow1.png" alt="user flows image" class="troveuser">
-        <img src="images/trove/userflow2.png" alt="user flows image" class="troveuser">
-          </div>
-    <div>
-        <a href="https://paper.dropbox.com/doc/User-Flows-2--AzATkSmnmO6PDH21JKlk~FRZAQ-hAYhkSMHhNcfglCncnUa8" target="_blank" class="button">View more</a>
-      </div>
     <section class="wireframes">
       <h2>Sketches and Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
@@ -183,7 +175,7 @@
         Users also preferred a Cinzel Decorative/Muli font pairing.
         Finally, users preferred wider width CTA buttons on the login and sign up pages.</p>
 
-      <img src="images/trove/surveygraph.png" alt="preference graph" class="graph">
+      <img src="images/surveygraph.svg" alt="preference graph" class="graph">
         <p>83% of user preferred the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       </section>
     <!-- final project -->
