Changed/fixed project backgrounds
display backgrounds
images
project information etc

--- a/busybus.html
+++ b/busybus.html
@@ -71,9 +71,7 @@
     <br>
     <br>
     <br>
-    <img src="images/Work/smartmockups_busybus.jpg" alt="mockup image" class="projecthero" >
-    <h3>BusyBus</h3>
-    <p>BusyBus is a mobile transportation application designed<br> to help users navigate over-complicated<br>transit systems.<p>
+    <img src="images/bzybusdesktop.svg" alt="mockup image" class="projecthero" >
     <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- summary and solution-->
@@ -86,7 +84,10 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/Work/smartmockups_busybus1.png" alt="final design" class="busprototype2">
+      <p>My solution was to design a simplified navigation system, focused on displaying the map prominently in the
+         application, as a result of the feedback I got from the users during the discovery phase. I also wanted to
+         make sure that users were able to quickly identify when their bus would be arriving by displaying alerts
+         with bright, contrasting colors.</p>
       <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
       <br>
     </section>
@@ -105,7 +106,7 @@
     <section>
       <h2>Information Architecture:</h2>
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories:</p>
-      <img src="images/busybus/users.png" alt="user stories image" class="bususer">
+      <img src="images/bzytext.svg" alt="user stories image" class="bususer">
       <a href="https://docs.google.com/spreadsheets/d/16T6_oNmkekqiU6KiHm3a2rWygTtXUkap_rypvfT_rLY/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
     <section class="prototypes">
