--- a/medchat.html
+++ b/medchat.html
@@ -69,10 +69,7 @@
     <br>
     <br>
     <br>
-    <img src="images/Work/smartmockups_medchat.jpg" alt="mockup image" class="projecthero" >
-    <h3>MedChat summary</h3>
-    <p>My goal was to take the current patient portal applications on the market,
-      and redesign them to create a more user friendly experience.<p>
+    <img src="images/medchatdesktop.svg" alt="mockup image" class="projecthero" >
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- problem and solution-->
@@ -84,7 +81,9 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/Work/smartmockups_medchat1.png" alt="product mockup" class="medchatmockup">
+      <p>My solution was to streamline the homepage. This would help reduce the cognitive overload that users experience
+        upon opening their application. I also wanted to make the appointment scheduler more intuitive, so that older users would
+        also feel comfortable using the application on a regular basis to make their doctor appointments.</p>
       <br>
     </section>
     <!-- discovery -->
