--- a/project.html
+++ b/project.html
@@ -70,9 +70,7 @@
     <br>
     <br>
     <br>
-    <img src="images/Work/smartmockups_kby2urq9.jpg" alt="trove mockup image" class="projecthero">
-    <h3>Trove</h3>
-    <p>Trove is a cloud storage application that combines storage and organization with real-time collaboration.<p>
+    <img src="images/trovedesktop.svg" alt="trove mockup image" class="projecthero">
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
 
@@ -92,7 +90,9 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/trovemockup1.png" alt="trove mockup" class="center">
+      <p>My goal was to take some of the best aspects of current cloud storage
+    and organization applications and inject them with a sense of social networking. I accomplished this by designing a
+     user chat feature, and other easy-to-use features users mentioned in the surveys I conducted.</p>
       <br>
     </section>
     <!-- discovery -->
@@ -178,6 +178,16 @@
       <img src="images/surveygraph.svg" alt="preference graph" class="graph">
         <p>83% of user preferred the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       </section>
+      <!-- packed assets-->
+      <section>
+        <h2>Assets:</h2>
+        <br>
+        <p>I compiled all the assets for the completed project in a single file for an easy
+          hand-off to a potential developer. You can view them in Figma here:</p>
+          <br>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FNfxMRUW2tQ4ZTFgxLujqkz%2FTrove-Packed-Assets%3Fnode-id%3D0%253A1&chrome=DOCUMENTATION" allowfullscreen></iframe>
+      </section>
+
     <!-- final project -->
     <section>
       <h2>Final Design:</h2>
@@ -185,6 +195,7 @@
       <img src="images/trove/landingpage.png" alt="trove landing page" class="trove_landing">
       <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
     </section>
+
     <!-- conclusion -->
     <section>
       <h2>Conclusion:</h2>
