updated background image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
      <br>
      <br>
      <br>
-     <div class="welcome">
+     <div class="welcome" style="background-image: url('images/background2.jpg');">
 		   <h1>Hello, I'm Imani! (ee-mahn-ee)</h1>
           <p>A Product Designer and researcher based in Charlotte, NC. </p>
             <h6>I use my background in psychology to build
