--- a/medchat.html
+++ b/medchat.html
@@ -105,7 +105,7 @@
           an application that could take some of the most popular features of the MyChart
            application and cut out some of the unnecessary features.
         </p>
-        <img src="images/medchat/smartmockups_kfaf7re4.jpg" alt="user survey image" class="medchatmockup">
+        <img src="images/myhealthanalysis.svg" alt="user survey image" class="medchatmockup">
             <a href="https://docs.google.com/document/d/1kF1auQUzz9Y78F0U1aUMGWyYD7WaEPXr03TKNxQtFBQ/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
        </section>
       <!-- user personas -->
@@ -154,7 +154,7 @@
       we want consumers to feel comfortable while using our product. </p>
     <p>In designing the logo, I drafted three different designs:  </p>
     <img src="images/medchat/medchatlogosketch.jpg" alt="sketches" class="medchatsketch">
-  
+
 
 <!-- high-fidelity mockups-->
   <section class="mockups">
