changes about me image

--- a/about-me.html
+++ b/about-me.html
@@ -93,13 +93,20 @@
 
     <h2>My favorite tools:</h2>
     <ul class="tools">
-      <li><i class="fab fa-figma fa-3x"></i></li>
-      <li><i class="fab fa-invision fa-3x"></i></li>
-      <li><i class="fab fa-github-square fa-3x"></i></li>
-      <li><i class="fab fa-html5 fa-3x"></i></li>
-      <li><i class="fab fa-css3-alt fa-3x"></i></li>
-      <li><i class="fab fa-adobe fa-3x"></i></li>
+      <li><i class="fab fa-figma fa-2x"></i></li>
+      <li><i class="fab fa-invision fa-2x"></i></li>
+      <li><i class="fab fa-github-square fa-2x"></i></li>
+      <li><i class="fab fa-html5 fa-2x"></i></li>
+      <li><i class="fab fa-css3-alt fa-2x"></i></li>
+      <li><i class="fab fa-adobe fa-2x"></i></li>
     </ul>
+    <h2>My favorite things:</h2>
+     <ul class="things">
+       <li>My cat 🐱</li>
+       <li>Dungeons & Dragons 🐉</li>
+       <li>Stardew Valley ⭐️</li>
+       <li>Crossing off places to visit on my bucket list 🌎</li>
+     </ul>
       <a href="/documents/designresume.pdf" class="button"> Download my resume </a>
   </div>
 
