added flex info

--- a/medchat.html
+++ b/medchat.html
@@ -72,6 +72,33 @@
     <img src="images/medchatdesktop.svg" alt="mockup image" class="projecthero" >
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View finished prototype</a>
   </section>
+  <!-- flexbox -->
+  <div class="header-box">
+  <div class="roles info-section">
+   <h4>Roles:</h4>
+    <li>UX Design</li>
+    <li>Visual design</li>
+    <li>Branding and identity</li>
+  </div>
+  <div class="delivs info-section">
+    <h4>Deliverables:</h4>
+    <li>User surveys</li>
+    <li>User personas</li>
+    <li>User stories/flows</li>
+    <li>Competitive analysis</li>
+    <li>Wireframes</li>
+    <li>Branding and identity</li>
+    <li>User testing</li>
+    <li>High fidelity mockups</li>
+  </div>
+  <div class="info-section">
+    <h4>Tools:</h4>
+    <li>Figma</li>
+    <li>Maze</li>
+    <li>Usability Hub</li>
+    <li>Sketch</li>
+  </div>
+</div>
     <!-- problem and solution-->
   <div class="projectmain">
     <section class="problem">
