--- a/project.html
+++ b/project.html
@@ -73,6 +73,33 @@
     <img src="images/trovedesktop.svg" alt="trove mockup image" class="projecthero">
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
+  <!-- flexbox -->
+  <div class="header-box">
+  <div class="roles info-section">
+   <h4>Roles:</h4>
+    <li>UX Design</li>
+    <li>Visual design</li>
+    <li>Branding and identity</li>
+  </div>
+  <div class="delivs info-section">
+    <h4>Deliverables:</h4>
+    <li>User surveys</li>
+    <li>User personas</li>
+    <li>User stories/flows</li>
+    <li>Competitive analysis</li>
+    <li>Wireframes</li>
+    <li>Branding and identity</li>
+    <li>User testing</li>
+    <li>High fidelity mockups</li>
+  </div>
+  <div class="info-section">
+    <h4>Tools:</h4>
+    <li>Figma</li>
+    <li>Maze</li>
+    <li>Usability Hub</li>
+    <li>Sketch</li>
+  </div>
+</div>
 
     <!-- summary and solution-->
   <div class="projectmain">
@@ -107,18 +134,13 @@
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
+      <img src="images/trovecompetitve.png" alt="user survey image" class="center">
         <p><span class="bold">Google</span> has many products to offer its users through its Drive platform.
-          They have built-in templates for surveys, documents, spreadsheets,
-           and presentations. They also provide several tools for users to edit content with.</p>
-           <img src="images/trove/googledrivre.png"  alt="google drive image" class="center"><br>
-        <br><p> <span class="bold">Dropbox</span> is available on multiple platforms, iOS, Android, and Office 365 applications.
-          The application also has the option of administration control for
-         business users.</p>
-         <img src="images/trove/dropbox.png"  alt="dropbox image" class="center"><br>
-         <br><p><span class="bold"> Pinterest</span> allows users to “Pin”
-         images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
-          scrolling. </p>
-          <img src="images/trove/pinterest.png"  alt="pinterest image" class="center"><br>
+          They have built-in templates for surveys, documents, spreadsheets, and presentations. They also provide several tools for users to edit content with.
+         <span class="bold">Dropbox</span> is available on multiple platforms, iOS, Android, and Office 365 applications.
+          The application also has the option of administration control for business users.<span class="bold"> Pinterest</span> allows users to “Pin" images
+           or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen.
+            Pinterest’s platform allows for endless scrolling. </p>
           <a href="https://docs.google.com/document/d/1xJg4TUPONXPYxAXBafxe4DKsNYSO1RyiBYnhi0jO21c/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
      </section>
     <section>
@@ -135,7 +157,7 @@
         the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.
         Here are the five top tasks:</p>
-      <img src="images/trove/→ I want to search f.png" alt="user stories image" class="center">
+      <img src="images/trove/→ I want to search f.png" alt="user stories image" class="sketch">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <section class="wireframes">
@@ -178,7 +200,7 @@
       <img src="images/surveygraph.svg" alt="preference graph" class="graph">
         <p>83% of user preferred the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       </section>
-    
+
 
     <!-- final project -->
     <section>
