--- a/busybus.html
+++ b/busybus.html
@@ -74,6 +74,31 @@
     <img src="images/bzybusdesktop.svg" alt="mockup image" class="projecthero" >
     <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
   </section>
+  <!-- flexbox -->
+  <div class="header-box">
+  <div class="roles info-section">
+   <h4>Roles:</h4>
+    <li>UX Design</li>
+    <li>Visual design</li>
+    <li>Branding and identity</li>
+  </div>
+  <div class="delivs info-section">
+    <h4>Deliverables:</h4>
+    <li>User surveys</li>
+    <li>User stories/flows</li>
+    <li>Competitive analysis</li>
+    <li>Wireframes</li>
+    <li>Branding and identity</li>
+    <li>High fidelity mockups</li>
+  </div>
+  <div class="info-section">
+    <h4>Tools:</h4>
+    <li>Figma</li>
+    <li>Maze</li>
+    <li>Usability Hub</li>
+    <li>Sketch</li>
+  </div>
+</div>
     <!-- summary and solution-->
   <div class="projectmain">
     <section class="problem">
@@ -115,7 +140,7 @@
       <img src="images/busybus/sketch1.png" alt="prototype" class="busprototype">
       <a href="https://www.dropbox.com/s/jln6v9rd5yeytzz/Screenshot%202020-01-13%2020.25.57.png?dl=0" target="_blank" class="button">View more</a>
        </section>
-      
+
     <section class="usability">
       <h2>Usability Tests:</h2>
       <p>After creating the initial sketches, I decided to test three users on the flow of the application. The feedback users gave was that the icons on the application could use more clarity,
