--- a/about-me.html
+++ b/about-me.html
@@ -107,7 +107,7 @@
        <li>Stardew Valley ⭐️</li>
        <li>Crossing off places to visit on my bucket list 🌎</li>
      </ul>
-      <a href="images/Work/resume.pdf" class="button"> Download my resume </a>
+      <a href="documents/resume_ricks.pdf" class="button"> Download my resume </a>
   </div>
 
 
