--- a/project.html
+++ b/project.html
@@ -170,8 +170,9 @@
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. I started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br><br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="images/trove/moodboard1.png" alt="trove moodboard" class="mood">
-      <img src="images/trove/moodboard2.png" alt="trove moodboard" class="mood">
+      <img src="images/trove_branding3.svg" alt="trove moodboard" class="mood">
+      <img src="images/trove_branding1.svg" alt="trove moodboard" class="mood">
+      <img src="images/trove_branding2.svg" alt="trove moodboard" class="mood">
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -186,7 +187,7 @@
       <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
-      <h2>Usability Tests:</h2>
+      <h2>Usability Tests, Round 2:</h2>
       <p>The second round of usability tests provided insight into further improvements I could make to the application. I conducted this test with three users.
         From the feedback that I received, it seems like the idea and foundation behind the site have come together, but the fonts and icons used could be more consistent and user-friendly.</p>
        </section>
@@ -263,7 +264,7 @@
         }
 
         </script>
-        
+
  </body>
 
 </html>
