link to dropbox

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      <br>
      <br>
      <div class="welcome">
-		   <h1>Hello, I'm Imani! (ee-mahn-ee) 👋🏾 </h1>
+		   <h1>Hello, I'm Imani! (ee-mahn-ee) <span class="animate__swing"> 👋🏾 </span> </h1>
           <p>A Product Designer and researcher based in Charlotte, NC. </p>
            </div>
       </div>
@@ -93,7 +93,7 @@
        </div>
      <div class="project_content">
      <aside class="busybus">
-      <a href=""><img src="images/skyprint_mockup.svg" class="trovepic" alt="mockup"></a>
+      <a href="https://paper.dropbox.com/doc/SkyPrint-Product-Design--A9bq1zuxHBT9zC80OIrJK4i3AQ-L0foYKs8DEBVuGgQnlLBY"><img src="images/skyprint_mockup.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
      <div class="project_content">
