--- a/medchat.html
+++ b/medchat.html
@@ -170,7 +170,7 @@
          <img src="images/medchat/Homepage2.png" alt="screen" class="user">
          <img src="images/medchat/Homepage3.png" alt="screen" class="user">
          <aside>
-         <img src="images/medchat/piechart.png" alt="preference graph" class="mood">
+         <img src="images/medchat/piechart.png" alt="preference graph" class="graph">
          <p>Overall, the majority of users indicated a preference for homepage #2.</p>
          </aside>
        </section>
@@ -187,7 +187,7 @@
   <section class="mockups">
     <h2>Mockups:</h2>
     <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-    <img src="images/medchat/medchat3.png" alt="mockup image" class="medchatmockup">
+    <img src="images/medchat/mc1.png" alt="mockup image" class="medchatmockup">
     <a href="https://invis.io/U2XQQ7PN9E8" target="_blank" class="button">View more</a>
     </section>
 
@@ -210,7 +210,7 @@
   <section>
     <h2>Final Design:</h2>
     <br>
-    <img src="images/Work/smartmockups_medchat1.png" alt="trove landing page" class="medchatmockup">
+    <img src="images/medchat/mc2.png" alt="trove landing page" class="medchatmockup">
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View prototype</a>
   </section>
   <!-- conclusion -->
