--- a/medchat.html
+++ b/medchat.html
@@ -150,7 +150,7 @@
       <h2>Information Architecture:</h2>
       <p>I then crafted user stories and userflows were by gathering data from the user survey responses, the competitive analysis and the user personas.
         Below are the highest prority user stories: </p>
-      <img src="images/medchat/→ I want to message.svg" alt="user stories image" class="center">
+      <img src="images/medchat/usersurveyresponses1.png" alt="user stories image" class="center">
       <a href="https://docs.google.com/spreadsheets/d/19FFi336tp-7AefScqzLHkzyhhFTLIohiuIsehttFe1s/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
 
