--- a/project.html
+++ b/project.html
@@ -157,22 +157,22 @@
         the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.
         Here are the five top tasks:</p>
-      <img src="images/trove/→ I want to search f.png" alt="user stories image" class="sketch">
+      <img src="images/trove/usersurveyresponses.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <section class="wireframes">
       <h2>Sketches and Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-      <img src="images/trove/wireframe2.png" alt="wireframe image" class="wireframeimage">
+      <img src="images/trove/wireframe1.png" alt="wireframe image" class="medchatmockup">
       <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. I started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br><br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="images/trove_branding3.svg" alt="trove moodboard" class="mood">
-      <img src="images/trove_branding1.svg" alt="trove moodboard" class="mood">
-      <img src="images/trove_branding2.svg" alt="trove moodboard" class="mood">
+      <img src="images/trove_branding3.svg" alt="trove moodboard" class="medchatmockup">
+      <img src="images/trove_branding1.svg" alt="trove moodboard" class="medchatmockup">
+      <img src="images/trove_branding2.svg" alt="trove moodboard" class="medchatmockup">
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -183,7 +183,7 @@
     <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/trove/mockup1.png" alt="mockup image" class="mockupimage">
+      <img src="images/trove/wireframe2.png" alt="mockup image" class="mockupimage">
       <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -207,7 +207,7 @@
     <section>
       <h2>Final Design:</h2>
       <br>
-      <img src="images/trove/landingpage.png" alt="trove landing page" class="trove_landing">
+      <img src="images/trove/wireframe3.png" alt="trove landing page" class="trove_landing">
       <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
     </section>
 
