update skyprint casestudy

--- a/project.html
+++ b/project.html
@@ -95,9 +95,8 @@
   <div class="info-section">
     <h4>Tools:</h4>
     <li>Figma</li>
-    <li>Maze</li>
+    <li>Invision</li>
     <li>Usability Hub</li>
-    <li>Sketch</li>
   </div>
 </div>
 
