--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
        </div>
      <div class="project_content">
      <aside class="busybus">
-      <a href="https://paper.dropbox.com/doc/SkyPrint-Product-Design--A9bq1zuxHBT9zC80OIrJK4i3AQ-L0foYKs8DEBVuGgQnlLBY"><img src="images/skyprint_mockup.svg" class="trovepic" alt="mockup"></a>
+      <a href="/skyprint.html"><img src="images/skyprint_mockup.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
      <div class="project_content">
