--- a/medchat.html
+++ b/medchat.html
@@ -120,7 +120,7 @@
          how users felt about their current patient portal applications, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/mcsurvey.png" alt="user survey image" class="buscenter">
+        <img src="images/mcsurvey.png" alt="user survey image" class="center">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
@@ -158,7 +158,7 @@
   <section class="wireframes">
     <h2>Sketches and Wireframes:</h2>
     <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-    <img src="images/medchat/smartmockups_kfbawuls.png" alt="wireframe image" class="wireframeimage">
+    <img src="images/medchat/mcsketch.png" alt="wireframe image" class="medchatmockup">
     <a href="https://invis.io/QPXQQCC59XR" target="_blank" class="button">View more</a>
      </section>
   <!-- preference testing -->
@@ -181,6 +181,7 @@
       we want consumers to feel comfortable while using our product. </p>
     <p>In designing the logo, I drafted three different designs:  </p>
     <img src="images/medchat/medchatlogosketch.jpg" alt="sketches" class="medchatsketch">
+    <img src="images/medchat/MedChatstyleguide.jpg" alt="sketches" class="medchatmockup">
 
 
 <!-- high-fidelity mockups-->
@@ -197,9 +198,7 @@
     <p>I conducted testing on my first round of high fidelity mockups using maze.design
        to understand if there were any issues that needed to be addressed before moving forward.
       </p>
-      <img src="images/medchat/maze_screenshot.jpg" alt="trove moodboard" class="user">
-      <img src="images/medchat/maze_screenshot2.jpg" alt="trove moodboard" class="user">
-      <img src="images/medchat/maze_screenshot3.jpg" alt="trove moodboard" class="user">
+      <img src="images/medchat/maze.png" alt="trove moodboard" class="medchatmockup">
       <br>
       <p>I found that users were having trouble with navigating the log-in page and the inbox/messages.<br><br>
         I decided that I needed to address these issues in my next version of the design.
