--- a/medchat.html
+++ b/medchat.html
@@ -201,7 +201,8 @@
       <img src="images/medchat/maze.png" alt="trove moodboard" class="medchatmockup">
       <br>
       <p>I found that users were having trouble with navigating the log-in page and the inbox/messages.<br><br>
-        I decided that I needed to address these issues in my next version of the design.
+        I decided that I needed to address these issues in my next version of the design. By changing the login screen CTAs
+        and reviewing the labels used for the inbox/messaging center.
         </p>
     </div>
 
