--- a/project.html
+++ b/project.html
@@ -182,7 +182,7 @@
     <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/trove/wireframe2.png" alt="mockup image" class="mockupimage">
+      <img src="images/trove/wireframe2.png" alt="mockup image" class="medchatmockup">
       <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -206,7 +206,7 @@
     <section>
       <h2>Final Design:</h2>
       <br>
-      <img src="images/trove/wireframe3.png" alt="trove landing page" class="trove_landing">
+      <img src="images/trove/wireframe3.png" alt="trove landing page" class="medchatmockup">
       <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
     </section>
 
