update header img

--- a/medchat.html
+++ b/medchat.html
@@ -94,7 +94,7 @@
   <div class="info-section">
     <h4>Tools:</h4>
     <li>Figma</li>
-    <li>Maze</li>
+    <li>Maze.design</li>
     <li>Usability Hub</li>
     <li>Sketch</li>
   </div>
