--- a/skyprint.html
+++ b/skyprint.html
@@ -96,6 +96,7 @@
     <li>Figma</li>
     <li>Usability Hub</li>
     <li>Invision</li>
+    <li>Maze.design</li>
   </div>
 </div>
     <!-- problem and solution-->
