pushed new competitve analysis
new competitive images/add medchat mockup to images...need to delete old CSS parts

--- a/medchat.html
+++ b/medchat.html
@@ -120,18 +120,21 @@
          how users felt about their current patient portal applications, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/mcsurvey.png" alt="user survey image" class="center">
+        <img src="images/mcsurvey.png" alt="user survey image" class="medchatmockup">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
       <!-- competitive analysis -->
       <section>
         <h2>Competitive Analysis:</h2>
-        <img src="images/myhealthanalysis.svg" alt="user survey image" class="medchatmockup">
-        <p>I conducted an analysis on three popular applications in the patient portal market: MyChart,
-          FollowMyHealth and healow. I found that an opportunity exists in this market for
-          an application that could take some of the most popular features of the MyChart
-           application and cut out some of the unnecessary features.
+        <img src="images/myhealthanalysis.png" alt="user survey image" class="medchatmockup">
+        <p>An opportunity exists in this market that is mostly dominated by MyChart. An application that could
+          take some of the most popular features of the MyChart application and cut out some of the unnecessary features would be able to gain market share quickly.
+          An application that can market itself to both families,
+          like healow with its multiple account management, and individuals would be the most successful.
+           MyChart has also found success with integrating some features with Apple Watch, however, appointments made in
+           the application cannot easily sync with Google, Outlook, or other applications. An app that takes into account the other technology available to their clients might do well.
+
         </p>
             <a href="https://docs.google.com/document/d/1kF1auQUzz9Y78F0U1aUMGWyYD7WaEPXr03TKNxQtFBQ/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
        </section>
