--- a/project.html
+++ b/project.html
@@ -127,19 +127,18 @@
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/trsurvey.png" alt="user survey image" class="center">
+        <img src="images/trsurvey.png" alt="user survey image" class="medchatmockup">
         <a href="https://docs.google.com/spreadsheets/d/10zVRX0QJES3QO5b5i8qLSpEJfG0i6YERuytIaujhMF0/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-      <img src="images/trovecompetitve.png" alt="user survey image" class="center">
-        <p><span class="bold">Google</span> has many products to offer its users through its Drive platform.
-          They have built-in templates for surveys, documents, spreadsheets, and presentations. They also provide several tools for users to edit content with.
-         <span class="bold">Dropbox</span> is available on multiple platforms, iOS, Android, and Office 365 applications.
-          The application also has the option of administration control for business users.<span class="bold"> Pinterest</span> allows users to “Pin" images
-           or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen.
-            Pinterest’s platform allows for endless scrolling. </p>
+      <img src="images/trovecompetitve.png" alt="user survey image" class="medchatmockup">
+        <p>The opportunity that arises between these platforms is in the space between
+          the casual and the business user. Google Drive seems to have the best balance of these
+          two target markets, with users finding use for their services at work and for personal use.
+          However, Pinterest offers users a way to quickly add visual inspiration to their files.
+          Dropbox provides business users a level of security and tiered costs to choose from.  </p>
           <a href="https://docs.google.com/document/d/1xJg4TUPONXPYxAXBafxe4DKsNYSO1RyiBYnhi0jO21c/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
      </section>
     <section>
@@ -170,7 +169,6 @@
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. I started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br><br>Brand mood: New, bright, creative, clean and crisp.</p>
       <img src="images/trove_branding3.svg" alt="trove moodboard" class="medchatmockup">
-      <img src="images/trove_branding1.svg" alt="trove moodboard" class="medchatmockup">
       <img src="images/trove_branding2.svg" alt="trove moodboard" class="medchatmockup">
        </section>
     <section>
