--- a/skyprint.html
+++ b/skyprint.html
@@ -132,8 +132,8 @@
     <section>
       <h2>Information Architecture:</h2>
       <p>I then crafted user stories and userflows were by gathering data from the user survey responses, the competitive analysis and the user personas. </p>
-      <img src="images/skyprint/usersurveyresponses2.png" alt="user stories image" class="center">
-      <img src="images/skyprint/userflow_skyprint.png" alt="user stories image" class="center">
+      <img src="images/skyprint/usersurveyresponses2.png" alt="user stories image" class="medchatmockup">
+      <img src="images/skyprint/userflow_skyprint.png" alt="user stories image" class="medchatmockup">
      </section>
 
   <!-- wireframe -->
