added ricks_landscaping project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
       <a href="/skyprint.html"><img src="images/skyprint_mockup.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
+       <div class="project_content">
+        <aside class="ricks">
+          <a href="https://www.rickslandscapeservices.com/"><img src="images/ricks_mockup.svg" class="trovepic" alt="mockup"></a>
+        </aside>
+        </div>
      <div class="project_content">
       <aside class="medchat">
         <a href="/project.html"><img src="images/trove_mockup.svg" class="trovepic" alt="mockup"></a>
