switch busybus for trove

--- a/busybus.html
+++ b/busybus.html
@@ -156,10 +156,15 @@
        </section>
     <section class="mockups">
      <h2>High Fidelity Mockups Version 2:</h2>
-     <p>I recieved feedback on my first version and made adjustments to include the provided data.xs</p>
+     <p>I recieved feedback on my first version and made adjustments to include the provided data.</p>
      <img src="images/busybus/version2.png" alt="mockup image" class="busmockupimage">
      <a href="https://www.dropbox.com/s/lt37fwppvxk1bm6/image%20%284%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
+   <section class="mockups">
+       <h2>Styleguide:</h2>
+       <p>I wanted to convey a sense of movement and city life with this young re-imagining of the BusyBus brand.</p>
+       <img src="images/busybus/BusyBusstyle.jpg" alt="mockup image" class="medchatmockup">
+        </section>
     <!-- final project -->
     <section class="final_design">
       <h2>Final Design:</h2>
