--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
      <div class="project_content">
       <aside class="medchat">
-        <a href="/project.html"><img src="images/trove_mockup.svg" class="trovepic" alt="mockup"></a>
+        <a href="/busybus.html"><img src="images/busybus.svg" class="trovepic" alt="mockup"></a>
       </aside>
       </div>
      </div>
@@ -126,7 +126,7 @@
          <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
          <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
         </ul>
-        <p>Designed and Developed by Imani Ricks 2020</p>
+        <p>Designed and hand-coded by Imani Ricks 2020</p>
       </footer>
     </div>
   </div>
