--- a/busybus.html
+++ b/busybus.html
@@ -71,7 +71,7 @@
     <br>
     <br>
     <br>
-    <img src="images/bzybusdesktop.svg" alt="mockup image" class="projecthero" >
+    <img src="images/busybusmockup3.png" alt="mockup image" class="projecthero" >
     <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
   </section>
   <!-- flexbox -->
