--- a/medchat.html
+++ b/medchat.html
@@ -69,7 +69,7 @@
     <br>
     <br>
     <br>
-    <img src="images/medchatdesktop.svg" alt="mockup image" class="projecthero" >
+    <img src="images/medchatmockup3.png" alt="mockup image" class="projecthero" >
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View finished prototype</a>
   </section>
   <!-- flexbox -->
