--- a/skyprint.html
+++ b/skyprint.html
@@ -69,7 +69,7 @@
     <br>
     <br>
     <br>
-    <img src="images/skyprint/skyprint header.png" alt="mockup image" class="projecthero" >
+    <img src="images/skyprintmockup3.png" alt="mockup image" class="projecthero" >
     <a href="https://invis.io/ZMYFUGREPJS" target="_blank" class="button">View finished prototype</a>
   </section>
   <!-- flexbox -->
