--- a/busybus.html
+++ b/busybus.html
@@ -151,13 +151,13 @@
     <section class="mockups">
       <h2>High Fidelity Mockups Version 1:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/busybus/version1.png" alt="mockup image" class="busmockupimage">
+      <img src="images/busybus/busbus2.png" alt="mockup image" class="medchatmockup">
       <a href="https://www.dropbox.com/s/z190568mtl328cf/prototype3.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="mockups">
      <h2>High Fidelity Mockups Version 2:</h2>
      <p>I recieved feedback on my first version and made adjustments to include the provided data.</p>
-     <img src="images/busybus/version2.png" alt="mockup image" class="busmockupimage">
+     <img src="images/busybus/busbus3.png" alt="mockup image" class="medchatmockup">
      <a href="https://www.dropbox.com/s/lt37fwppvxk1bm6/image%20%284%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
    <section class="mockups">
@@ -170,7 +170,7 @@
       <h2>Final Design:</h2>
       <p>With the final design of BusyBus, I decided to incorporate some more feedback I recieved. I created a visual alert (red) for incoming buses.
         I also adjusted the visual hierarchy of the bus numbers and route names.</p>
-      <img src="images/Work/smartmockups_busybus1.png" alt="final design" class="busprototype2">
+      <img src="images/busybus/busbus1.png  " alt="final design" class="busprototype2">
       <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
