--- a/busybus.html
+++ b/busybus.html
@@ -170,7 +170,7 @@
       <h2>Final Design:</h2>
       <p>With the final design of BusyBus, I decided to incorporate some more feedback I recieved. I created a visual alert (red) for incoming buses.
         I also adjusted the visual hierarchy of the bus numbers and route names.</p>
-      <img src="images/busybus/busbus1.png  " alt="final design" class="busprototype2">
+      <img src="images/busybusmockup3.png" alt="final design" class="busprototype2">
       <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
